# sel4-training

./: CMakeLists.txt  README.md
src/: main.c
